# health_rag

./: .env.example  .gitignore  Dockerfile  RAG_BLOG_POST.md  README.md  brass.md  golf_drive_distance.ipynb  pyproject.toml  semantic_chunking.py
.deepeval/: .deepeval_telemetry.txt
app/: dependencies.py  main.py
app/core/: config.py
app/models/: schemas.py
app/routers/: batch.py  evaluation.py  ingest.py  query.py
app/services/: batch.py  evaluation.py  ingest.py  query.py  semantic_chunking.py
scripts/: evaluate_deepeval.py  generate_synthetic_data.py  list_gemini_models.py  run_ingestion.py  setup_dev.sh  test_keys.py
vector_db/: chroma.sqlite3
